--- a/OneWiki/data/Geth.wiki
+++ b/OneWiki/data/Geth.wiki
@@ -5,3 +5,12 @@ A very happy pleasant fellow who is a cartographer that has lived in town for a 
 He is also the cartographer contracted by [Redbeard The Unlucky] who produced a map of [Fiore] to [Augsburg]
 
 Joined the good group. 
+
+
+Guild Artisan: Catrographers
+Proficiencies: Insight, Persuasion
+10hp
+13+2 AC (chain shirt + shielf from marines)
+1d6 (shortsword)
+
+15 gold
