--- a/OneWiki/data/Fiore.wiki
+++ b/OneWiki/data/Fiore.wiki
@@ -52,6 +52,7 @@ Places of interest in Mayara:
         -dieties (pg 10 DM handbook)
         -Ran by Head Cleric [Martin Terratio], a very peaceful human
         -Book [Pantheon of the Dawn War] can be found here
+        -[Kerri] is hiding out here from the [Bandits of Deception]
       Market
         -blacksmith, Shirrong Bronzecore, hearty personality
             sells/buys all metal based weapons
@@ -68,7 +69,7 @@ Places of interest in Mayara:
             items for sale include bananas, kiwi, cheese, grapes, cave cricket on a stick. (8sp per item (counts as a meal))          
         -flectcher, Yanny McLougin (female halfling), redneckish personality
             items for sale short bow (25g), long bow(50g), arrows (20x 1g), 100 gryphon feather arrows (+1 to hit) 20x 4g)
-        -animal vendor, Ghan Bopps (dwarf) a bit smelly, but otherwise very nice, has a wanted poster out for the Fiore Griffin with the [Marines] - 436 Gold
+        -animal vendor, Ghan Bopps (dwarf) a bit smelly, but otherwise very nice, had a wanted poster out for the Fiore Griffin with the [Marines] - 436 Gold
             2cp x lb of chicken (1d6) (5 at stall)
             1gp per goat (2 at stall)
             3gp per pig (2 at stall)
