--- a/OneWiki/data/Marines.wiki
+++ b/OneWiki/data/Marines.wiki
@@ -6,8 +6,8 @@ currently has bounties on
 		Pirate Admiral [Don Kreig](250 Gold) +100 from [Augsburg] 
 		[Rex The Smasher](150 Gold)
 		[Redbeard The Unlucky]( 20 Gold)  CLAIMED BY KEIRAN
-		[Fiore] Griffin (40 Gold) Posted in Mayara by the livestock merchant 
-		The Bandits of Deception (50 Gold) Posted in Mayara by the Carpenter's guild
+		[Fiore] Griffin (40 Gold) Posted in Mayara by Ghan Bopps CLAIMED BY GOOD GROUP 
+		The [Bandits of Deception] (50 Gold) Posted in Mayara by the Carpenter's guild
             -shows the faces of Vulcan, Edan, Croaker, Krieger
 
 
