--- a/OneWiki/data/Quests.wiki
+++ b/OneWiki/data/Quests.wiki
@@ -2,7 +2,7 @@
 
 +++GOOD CALENDAR
 1234567
-XX
+XXXX
 +++GOOD group
 [Quest 1]
 
@@ -25,6 +25,17 @@ They noticed the mummified arm of [Tharizdun] had re-merged together, and prompt
   intimidated Ghan Bopps into giving 60 gold for the gryphon.
   sold 100 gryphon feathers to yanny at 1s each
   
+  offered services to escort a trade ship from [Fiore] to [Ak'anon] (provided 500lbs of food and 4 [Marines])
+  compensation is 2g per day per person (5 days, 10g x 4, 40g total)
+  [Geth] was mentioned as a new recruit and accepted the offer to join along.
+  
+  the trip:
+  -the trade vessel will have 6 commoners on a keel boat
+  random encounter on a D6:
+  1-2 - [Don Kreig] vessel is encountered with 8 crew members + 1 leutenant + 1 slave from Arabasta 
+  3-4 - turbulent storm for 3 days straight (toward Dun Morhen)
+  5-6 - no problems until Ak'anon, where they witness a Don Kreig vessel being demolished by their cannon defence.
+   
 
 +++EVIL CALENDAR
 1234567
