--- a/OneWiki/data/Redbeard The Unlucky.wiki
+++ b/OneWiki/data/Redbeard The Unlucky.wiki
@@ -6,6 +6,8 @@ Initially found at the Augsburg Crying Clam Inn/bar drinking away his unfortunat
 He was met by the heroes Keiran, Kyra and Jack, who bamboozled him, and turned him into local marine authorities who had
 a 20 gold bounty on his head. Last seeen in the jail cell at the Augsburg Marine Outpost.
 
+He was later encountered by the Evil group who chose to kill him.
+
 Visual Description:
 A older looking man who has a large dirty redish colored beard. Wearing a large dark red trench coat
 
