--- a/OneWiki/data/Quests.wiki
+++ b/OneWiki/data/Quests.wiki
@@ -42,7 +42,7 @@ They noticed the mummified arm of [Tharizdun] had re-merged together, and prompt
 XXXXXXX
 XXXXXXX
 XXXXXXX
-XXXXX
+XXXXXX
 +++EVIL group
 
 ++++Evil Session 2 Notes:
@@ -92,3 +92,15 @@ Dockson 20s
         -5s innkeep  
         -8s wine      
         
+++++Session 6? Notes:
+Croaker needs to do level up to 4        
+
+asked around augsburg for Kerri, spoke with Greg and came up empty.
+
+recruited Borivik who has lost his wife to slavery via Don Kreig's men.
+BORIVIK: XXXXXX
+ANTON:   XXXXXXX
+looking for Lander, a dockworker who has a thing out for Don Kreig.
+
+one day into sailing to Gorda from Arabasta (will be pursued by a Don Kreig Vessel.
+write some enchantment content?
