--- a/OneWiki/data/Steel Inquisitor.wiki
+++ b/OneWiki/data/Steel Inquisitor.wiki
@@ -2,3 +2,6 @@
 
 have undergone a transformation to make them more dragonlike by the [Order of Steel]. They are lawful evil and are responsible for keeping order and apprehending mages in [Luthadel]. Can sense metal and usage of magic.
 (use half-dragon veteran ph 180 of monster handbook)
+100HP
+resistance: fire
+18 AC
