adding evil session notes

--- a/OneWiki/data/Quests.wiki
+++ b/OneWiki/data/Quests.wiki
@@ -92,15 +92,16 @@ Dockson 20s
         -5s innkeep  
         -8s wine      
         
-++++Session 6? Notes:
-Croaker needs to do level up to 4        
-
+++++Session 6? Notes:     
 asked around augsburg for Kerri, spoke with Greg and came up empty.
 
 recruited Borivik who has lost his wife to slavery via Don Kreig's men.
 BORIVIK: XXXXXX
-ANTON:   XXXXXXX
 looking for Lander, a dockworker who has a thing out for Don Kreig.
 
 one day into sailing to Gorda from Arabasta (will be pursued by a Don Kreig Vessel.
 write some enchantment content?
+
++++++Session 7 notes:
+traveled back to fiore after defeating rex the smasher at sea
+still need to come up with enchantment things
