--- a/OneWiki/data/Rex The Smasher.wiki
+++ b/OneWiki/data/Rex The Smasher.wiki
@@ -1,3 +1,11 @@
 ﻿++ Rex The Smasher
 
 A very unintelligent man who believes might is right. His muscles bulge and he is rather intimidating to look at. He leads a nasty crew of about 30 other thugs who are all always forceful with what they do.
+(half koloss)
+
+
+Gladiator pg 346
+loot: 4D20 + 20 Gold
+
+Thugs pg 350
+loot: 
