--- a/OneWiki/data/Quests.wiki
+++ b/OneWiki/data/Quests.wiki
@@ -1,107 +1,6 @@
 ﻿++ Quests
 
-+++GOOD CALENDAR
-1234567
-XXXX
-+++GOOD group
-[Quest 1]
+[Good Group Notes]
 
-[Session 3 Notes]
-[Session 4 Notes]
-++++Session 5 Notes:
-They got audience with the [King Jor Doken], and provided the music box and banner of [Luthadel] to him. He failed to see significance of the music box, and was curious about the story behind the banner, and suggested he would be willing to accept another audience with the party to hear the story.
+[Evil Group Notes]   
 
-The group checked in with the aftermath of their vandalism of the Carpenter's guild, and attempted to sow the seeds of trouble by claiming the Mason's Guild was responsible. Showing a pulley they claimed to have found at the site of the incident as evidence.
-
-They then set out to their boat, through the woods they first encountered the elk from the night before looking for food again, but upon back tracking, it had been attacked by wolves, which they then faught a difficult battle and triumphed over. They hauled much meat back to their ship and reviewed their belongings.
-
-They noticed the mummified arm of [Tharizdun] had re-merged together, and promptly chopped it into more pieces in response. They also spent two more days trying to brute force the safe open, and finally succeed. [Kieran Maon] ended up eating the fruit inside, obtain a smelly power of sorts and a lack of tolerance for salt water.
-
-++++Session 6:
-  pre-game notes: cross-game changes, another boat being worked on at the north dock via evil group.
-  -the group has slain the Griffin Ghan Bopps requested killed, and are entitled to 40 gold  
-
-++++Session 7:
-  intimidated Ghan Bopps into giving 60 gold for the gryphon.
-  sold 100 gryphon feathers to yanny at 1s each
-  
-  offered services to escort a trade ship from [Fiore] to [Ak'anon] (provided 500lbs of food and 4 [Marines])
-  compensation is 2g per day per person (5 days, 10g x 4, 40g total)
-  [Geth] was mentioned as a new recruit and accepted the offer to join along.
-  
-  the trip:
-  -the trade vessel will have 6 commoners on a keel boat
-  random encounter on a D6:
-  1-2 - [Don Kreig] vessel is encountered with 8 crew members + 1 leutenant + 1 slave from Arabasta 
-  3-4 - turbulent storm for 3 days straight (toward Dun Morhen)
-  5-6 - no problems until Ak'anon, where they witness a Don Kreig vessel being demolished by their cannon defence.
-   
-
-+++EVIL CALENDAR
-1234567
-XXXXXXX
-XXXXXXX
-XXXXXXX
-XXXXXX
-+++EVIL group
-
-++++Evil Session 2 Notes:
-The crew had supplied food to tide over the refugee camp for a few days before they persuaded the [Marines] to let them join along when they departed.
-
-[Edan] started a fight that resulted in the death of the [Golden Hand] mercenary band that helped the refugee camp, as well as losing [Renegade Leader Kelsier] in the process.
-
-++++Evil Session 3 Notes:
-the group set sail, west to wherever the [Marines] were headed. They commandered the boat from them via murder, and also killed the fugitive [Redbeard The Unlucky] that they had on board.
-
-The next day, they broke out of the fog into a clear day, where they unfortunately encountered a boat of [Don Kreig]'s men that has just ransacked [Augsburg], on board, they had the pirsoner [Dockson], a halfling smuggler who was responsible for getting the help from the [Golden Hand], though, he fell in trouble with [Don Kreig]'s men when they overheard him talking of the heist [Renegade Leader Kelsier] had done against a noble house of [Luthadel] 
-
-Slaves: [Kerri], [Anton]
-Bandit survivor: slain
-[Dockson]: Befriended
-Reminder: [Cael Caemond] do level up - abilities - HP
-sold boat for 2400
-Dockson quoted slaves at 40g to pirates
-
-++++Session 4 notes:
-story to marine officers of mayara:
-redbeard probably overthrew the marine boat and murdered them, then went on to join Don Krieg's men. They attacked the party five days east of Fiore. Badges have been returned. 
-
-Edan gives his name with Elisha the exotic food vendor.
-
-slew the snoody carpenter's guild member.
-
-40 population of refugee camp now - SLAUGHTERED
-
-sold refugee vessel for 2600
-slew 10 wolves, encountered harris flenre
-sent Anton (billy) into town to do chores)
--paid 350g toward armor, 450g remaining 2 days left
-
-200g to Dockson to buy a diamond & blacksmith tools & brewer supplies & woodcarving tools & alchemist & disquise kit
--smithing tools - 20g
--woodcarving - 1g
--brewing supplies - 20g
--herbalism kit - 5g
--diamond - 50g - 4s wine
-103g 6s
-78g 6s
-
-Kerri 25g => Temple of Elysium
-Dockson 20s
-        -5s innkeep
-        -5s innkeep  
-        -8s wine      
-        
-++++Session 6? Notes:     
-asked around augsburg for Kerri, spoke with Greg and came up empty.
-
-recruited Borivik who has lost his wife to slavery via Don Kreig's men.
-BORIVIK: XXXXXX
-looking for Lander, a dockworker who has a thing out for Don Kreig.
-
-one day into sailing to Gorda from Arabasta (will be pursued by a Don Kreig Vessel.
-write some enchantment content?
-
-+++++Session 7 notes:
-traveled back to fiore after defeating rex the smasher at sea
-still need to come up with enchantment things
