adding evil session notes

--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -64,3 +64,14 @@ one day into sailing to Gorda from Arabasta
 
 +++++Session 7 notes:
 traveled back to fiore after defeating rex the smasher at sea
+
++++++Session 8 notes:
+carts borrowable for 15g, 5g returned when the cart is returned.
+ acquired left arm of Therizdun
+ acquired 3 wolf pups, 1 full grown one
+ 
+ 1 + 6 gnomes (bandit captain) (including security council member)
+ 1 Rimardo human - Fiore noble
+ Taman human from Gorda
+ 
+ knocked out the gnome council master and two of his companions, four got away.
