--- a/OneWiki/data/Fiore.wiki
+++ b/OneWiki/data/Fiore.wiki
@@ -68,7 +68,7 @@ Places of interest in Mayara:
         -exotic food vendor, Elisha Vanesson (human)(knows of [AkumaFruits], but tries to be secretive)
             items for sale include bananas, kiwi, cheese, grapes, cave cricket on a stick. (8sp per item (counts as a meal))          
         -flectcher, Yanny McLougin (female halfling), redneckish personality
-            items for sale short bow (25g), long bow(50g), arrows (20x 1g), 100 gryphon feather arrows (+1 to hit) 20x 4g)
+            items for sale short bow (25g), long bow(50g), crossbow bolts/arrows (20x 1g), SOLD OUT: gryphon feather arrows (+1 to hit) 20x 4g)
         -animal vendor, Ghan Bopps (dwarf) a bit smelly, but otherwise very nice, had a wanted poster out for the Fiore Griffin with the [Marines] - 436 Gold
             2cp x lb of chicken (1d6) (5 at stall)
             1gp per goat (2 at stall)
