--- a/OneWiki/data/Gorda.wiki
+++ b/OneWiki/data/Gorda.wiki
@@ -73,4 +73,4 @@ The Sage's Cellar
         -Fine Parchment - 1s per sheet
         -Blank spell books - 5g each      
         -Book of Understanding 300g - pg 209   
-        -Sentient Rock - 50g
+        -Sentient Rock (Henry)- 50g
