--- a/OneWiki/data/Marines.wiki
+++ b/OneWiki/data/Marines.wiki
@@ -4,10 +4,10 @@ A law enforcement force throughout the world, funded by the world government
 
 currently has bounties on
 		Pirate Admiral [Don Kreig](250 Gold) +100 from [Augsburg] 
-		[Rex The Smasher](150 Gold) 200 updated
+		[Rex The Smasher](150 Gold) 200 updated CLAIMED BY EDAN
 		[Redbeard The Unlucky]( 20 Gold)  CLAIMED BY KEIRAN
 		[Fiore] Griffin (40 Gold) Posted in Mayara by Ghan Bopps CLAIMED BY GOOD GROUP 
-		The [Bandits of Deception] (50 Gold) Posted in Mayara by the Carpenter's guild
+		The [Bandits of Deception] (70 Gold) Posted in Mayara by the Carpenter's guild
             -shows the faces of Vulcan, Edan, Croaker, Krieger
 
 
