--- a/OneWiki/data/Good Group Notes.wiki
+++ b/OneWiki/data/Good Group Notes.wiki
@@ -35,3 +35,23 @@ They noticed the mummified arm of [Tharizdun] had re-merged together, and prompt
   1-2 - [Don Kreig] vessel is encountered with 8 crew members + 1 leutenant + 1 slave from Arabasta 
   3-4 - turbulent storm for 3 days straight (toward Dun Morhen)
   5-6 - no problems until Ak'anon, where they witness a Don Kreig vessel being demolished by their cannon defence.
+
+++++Session 8:
+500lb -496 -492 -488 -484
+
+2 marines on trade vessel
+33 yrs old Shan
+26 yrs old Kosef
+2 on group's vessel
+
+XXXX
+
+"what kind of insight can you offer?"
+"can you give me pants?"
+"dear hand i wish to be carried away to Luthadel"
+
+"definitely not stolen" + carpenter's guild
+
+Gnome - Orryn
+
+Keiran aprehended for stealing from the Alchemist shop.
