adding evil session notes

--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -75,3 +75,22 @@ carts borrowable for 15g, 5g returned when the cart is returned.
  Taman human from Gorda
  
  knocked out the gnome council master and two of his companions, four got away.
+ 
+ ++++Session 9 notes:
+ Kieran staches 5g from Vulcan's bet
+ 
+ burned down a fisherman's house near the north dock.
+ knocked out the fisherman
+ carved "Mohogany" in the arm of the fisherman.
+ 
+ Taman - 15g
+ 
+ attacked by a pursuing marine vessel and killed the 10 men and officer
+ 
+ Prisoners:
+ gnome councilman - killed
+ gnome guard - killed
+ marine officer - killed
+ fisherman - thrown overboard
+ 
+ at the outer islands
