--- a/OneWiki/data/Good Group Notes.wiki
+++ b/OneWiki/data/Good Group Notes.wiki
@@ -55,3 +55,5 @@ XXXX
 Gnome - Orryn
 
 Keiran aprehended for stealing from the Alchemist shop.
+
+REMEMBER: heroes need to add their 100 adventuring experience.
