--- a/OneWiki/data/Kunark.wiki
+++ b/OneWiki/data/Kunark.wiki
@@ -3,8 +3,9 @@
 Home land of the Iksar and Koloss. Region that [Luthadel] and [Kalas] is located.
 
 Other regions of interest include 
-    -[Mines of House Zasheir]
-    -[Plantation of House Zolis]
+    -[Mines of House Zasheir] - 
+    -[Plantation of House Zolis] - where the evil group and refugees began
+    -[The Ash Mount] - Volcano where Gruumsh is sealed (large body seemingly melted into the inner rock of the volcano)
 
 Wildlife of Kunark (monster manual): 
     [Mistwraith] (use flesh golem pg 169)
