--- a/OneWiki/data/Order of Steel.wiki
+++ b/OneWiki/data/Order of Steel.wiki
@@ -6,3 +6,7 @@ They primarily worship the god emporer [Venril Sathir]
 The order of steel has been responsible for the work that creates [Steel Inquisitor]s
 
 Lead by [Head Bishop Skarjun]
+
+Bother members (Cult Fanatic pg 345)
+ -often cast a +2 AC Shield of Faith spell on nearby Steel Inquisitors
+ -or inflict wounds spell in melee combat
