updating evil group notes

--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -96,5 +96,11 @@ traveled back to fiore after defeating [Rex The Smasher] at sea
  A large, black-steel made ship with spiked and jagged architecture. This ship has no sails. It is powered by an Etherium core (orb with runes that match Edan's orb with Runes), that when focused upon by a magically attuned "captain", can control the ship's movement.
  - 2 [Steel Inquisitor]s
  - 6 Brothers
- - 3 cannons - left, right and front
+ - 3 cannons - left, right and front (pg 255 DM handbook)
  
+the North dock will have 20 [Marines] + Captain [Bran C'Num] + Officer [Artin Torbera] 
+4 trained gnomish guards (thugs)
+
+leave behind kael, dockson at one of the outer islands with their main ship.
+
+need to write in admirals.
