--- a/OneWiki/data/King Jor Doken.wiki
+++ b/OneWiki/data/King Jor Doken.wiki
@@ -2,16 +2,16 @@
 
 Jor Doken is a strong willed Dwarf, the king of Mayara.
 
-STR 18  DEX 10  CON 16   INT 12  WIS 14  CHR 12
+STR 18(+4)  DEX 10  CON 16(+3)   INT 12(+1)  WIS 14(+2)  CHR 12(+1)
 
-100hp
+130hp
 AC 18 platemail 
 Ring of Resistance Psychic (Jade)
 Ring of Resistance Cold (Tourmaline)
 Ring of Resistance Fire (Garnet)
 
 (can attack 3 times in one turn)
-Warhammer +1 (+6 to hit)
+Warhammer +1 (+8 to hit)
 1d8+5  1-handed
 1d10+5 2-handed
 
