--- a/OneWiki/data/Gorda.wiki
+++ b/OneWiki/data/Gorda.wiki
@@ -16,6 +16,7 @@ Frequent Visitors:
     -[Don Kreig]'s men
     -[Rex The Smasher]
     -[Robert Culliford]
+    -[Golden Hand] mercenaries
     
 Areas of Interest:
 
